--- a/index.html
+++ b/index.html
@@ -9,27 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
-    <title>ToDo List</title>
-</head>
-
-<body>
-    <h1 class="title">Stuffs I need to do</h1>
-    <div class="all-tasks">
-        <h2 class="task-list">My list</h2>
-        <ul style="list-style: circle;">
-            <li class="list-name active-list">XLSX-JSON</li>
-            <li class="list-name">Work</li>
-            <li class="list-name">Grocery</li><!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="design.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
     <script defer src="script.js"></script>
     <title>ToDo List</title>
 </head>
@@ -56,7 +35,7 @@
 
             <div class="create-new-task">
                 <form action="" data-new-task-form>
-                    <input type="text" data-new-task-input name="new-task" placeholder="Add new task" class="new-input">
+                    <input type="text" data-new-task-input name="new-task" placeholder="Add a task" class="new-input">
                     <button type="submit" class="btn-task">+</button>
                 </form>
             </div>
@@ -82,59 +61,6 @@
         </div>
         </div>
     </template>
-</body>
-
-</html>
-        </ul>
-        <form action="">
-            <input type="text" name="new-list" placeholder="Add new list" class="new-input">
-            <button type="submit" class="btn-list">+</button>
-        </form>
-    </div>
-
-    <div class="todo-list">
-        <div class="todo-header">
-            <h2 class="task-title">XLSX-JSON</h2>
-            <p class="task-count">3 Tasks remaining</p>
-        </div>
-        <div class="todo-body">
-            <div class="tasks">
-                <div class="task">
-                    <input type="checkbox" name="task-1" id="task-1">
-                    <label for="task-1"> <span class="custom-checkbox"></span>Arrays</label>
-                </div>
-                <!-- end of task 1 -->
-                <div class="task">
-                    <input type="checkbox" name="task-2" id="task-2">
-                    <label for="task-2"> <span class="custom-checkbox"></span>BST</label>
-                </div>
-                <!-- end of task 2 -->
-                <div class="task">
-                    <input type="checkbox" name="task-3" id="task-3">
-                    <label for="task-3"> <span class="custom-checkbox"></span>Hashtable</label>
-                </div>
-                <!-- end of task 3 -->
-            </div>
-            <!-- end of tasks -->
-            <div class="create-new-task">
-                <form action="">
-                    <input type="text" name="new-task" placeholder="Add new task" class="new-input">
-                    <button type="submit" class="btn-task">+</button>
-                </form>
-            </div>
-
-            <div class="clear-tasks">
-                <button class="btn-delete">
-                    Clear completed tasks
-                </button>
-                <button class="btn-delete">
-                    Delete list
-                </button>
-            </div>
-        </div>
-    </div>
-
-    </div>
 </body>
 
 </html>
